kubernetes/hashbash-mysql-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: hashbash-mysql-deployment
  namespace: hashbash
spec:
  template:
    metadata:
      labels:
        role: mysql
    spec:
      containers:
        - name: mysql
          image: hypriot/rpi-mysql:5.5
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: mysql-data-volume
              mountPath: '/var/lib/mysql'
      volumes:
        - name: mysql-data-volume
          emptyDir: {}
