kubernetes/hashbash-mysql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: hashbash
spec:
  selector:
    role: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
