kubernetes/hashbash-web-service.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: hashbash-web-deployment
  namespace: hashbash
spec:
  template:
    metadata:
      labels:
        role: hashbash-web-service
    spec:
      containers:
        - name: hashbash-web
          image: jnorwood/hashbash-rpi_web:1.0.0-dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: hashbash-web-service
  namespace: hashbash
spec:
  selector:
    role: hashbash-web-service
  ports:
    - name: http
      port: 80
      targetPort: http
